load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = [
    "//src/main/cc/wfa/virtual_people/common/field_filter:__subpackages__",
    "//src/test/cc/wfa/virtual_people/common/field_filter:__subpackages__"
])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "template_util",
    hdrs = ["template_util.h"],
    visibility = ["//visibility:public"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/meta:type_traits",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "field_util",
    srcs = ["field_util.cc"],
    hdrs = ["field_util.h"],
    visibility = ["//visibility:public"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":template_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/meta:type_traits",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "type_convert_util",
    srcs = ["type_convert_util.cc"],
    hdrs = ["type_convert_util.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":template_util",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "integer_comparator",
    srcs = ["integer_comparator.cc"],
    hdrs = ["integer_comparator.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":field_util",
        ":template_util",
        ":type_convert_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/main/cc/wfa/measurement/common:macros",
    ],
)

cc_library(
    name = "message_filter_util",
    srcs = ["message_filter_util.cc"],
    hdrs = ["message_filter_util.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/main/cc/wfa/measurement/common:macros",
    ],
)

cc_library(
    name = "values_parser",
    srcs = ["values_parser.cc"],
    hdrs = ["values_parser.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":template_util",
        ":type_convert_util",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/main/cc/wfa/measurement/common:macros",
    ],
)
