load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "fieldfilter",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common:field_filter_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/com/google/protobuf",
    ],
)
