load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//src/test:__subpackages__"])

_IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "test_cc_proto",
    deps = [":test_proto"],
)

kt_jvm_proto_library(
    name = "test_kt_jvm_proto",
    deps = [":test_proto"],
)
