load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//src/test/cc/wfa/virtual_people/common/field_filter:__subpackages__"])

_IMPORT_PREFIX = "/src/test/cc"

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "test_cc_proto",
    deps = [":test_proto"],
)
