load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "HasFilterTest",
    srcs = ["HasFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.HasFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "EqualFilterTest",
    srcs = ["EqualFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.EqualFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "AnyInFilterTest",
    srcs = ["AnyInFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.AnyInFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "AndFilterTest",
    srcs = ["AndFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.AndFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "OrFilterTest",
    srcs = ["OrFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.OrFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "GtFilterTest",
    srcs = ["GtFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.GtFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "LtFilterTest",
    srcs = ["LtFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.LtFilterTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
