load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FieldFilterTest",
    srcs = ["FieldFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.FieldFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "HasFilterTest",
    srcs = ["HasFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.HasFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "EqualFilterTest",
    srcs = ["EqualFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.EqualFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "AnyInFilterTest",
    srcs = ["AnyInFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.AnyInFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "AndFilterTest",
    srcs = ["AndFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.AndFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "OrFilterTest",
    srcs = ["OrFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.OrFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "PartialFilterTest",
    srcs = ["PartialFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.PartialFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "GtFilterTest",
    srcs = ["GtFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.GtFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "LtFilterTest",
    srcs = ["LtFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.LtFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "InFilterTest",
    srcs = ["InFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.InFilterTest",
    deps = [
        "//imports/com/google/common/truth",
        "//imports/com/google/common/truth/extensions/proto",
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "NotFilterTest",
    srcs = ["NotFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.NotFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "TrueFilterTest",
    srcs = ["TrueFilterTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.TrueFilterTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)
