load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FieldUtilTest",
    srcs = ["FieldUtilTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.FieldUtilTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
