load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FieldUtilTest",
    srcs = ["FieldUtilTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.FieldUtilTest",
    deps = [
        "//imports/com/google/common/truth/extensions/proto",
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "TypeConvertUtilTest",
    srcs = ["TypeConvertUtilTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.TypeConvertUtilTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "ValuesParserTest",
    srcs = ["ValuesParserTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.ValuesParserTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "MessageFilterUtilTest",
    srcs = ["MessageFilterUtilTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.MessageFilterUtilTest",
    deps = [
        "//imports/com/google/common/truth/extensions/proto",
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)

kt_jvm_test(
    name = "IntegerComparatorUtilTest",
    srcs = ["IntegerComparatorUtilTest.kt"],
    test_class = "org.wfanet.virtualpeople.common.fieldfilter.utils.IntegerComparatorUtilTest",
    deps = [
        "//imports/org/junit",
        "//src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils",
        "//src/main/proto/wfa/virtual_people/common/field_filter/test:test_kt_jvm_proto",
        "@wfa_rules_kotlin_jvm//imports/kotlin/test",
    ],
)
